@@ -1237,6 +1237,7 @@ possibly temporarily, because it might be used internally."
                ;; symbol-hacking idioms
                "GENSYMIFY" "GENSYMIFY*" "KEYWORDICATE" "SYMBOLICATE"
                "INTERNED-SYMBOL-P" "PACKAGE-SYMBOLICATE"
+               "LOGICALLY-READONLYIZE"
 
                ;; certainly doesn't belong in public extensions
                ;; FIXME: maybe belongs in %KERNEL with other typesystem stuff?
