@@ -1938,3 +1938,85 @@ void gc_heapsort_uwords(heap array, int length)
         sift_down(array, 0, end);
     }
 }
+
+//// Coalescing of constant strings for SAVE-LISP-AND-DIE
+
+static void remap_string(lispobj* where, struct hopscotch_table* ht)
+{
+    lispobj obj = *where;
+    struct vector* s = (struct vector*)native_pointer(obj);
+    if (lowtag_of(obj) == OTHER_POINTER_LOWTAG &&
+        (widetag_of(s->header) == SIMPLE_BASE_STRING_WIDETAG
+#ifdef SIMPLE_CHARACTER_STRING_WIDETAG
+         || widetag_of(s->header) == SIMPLE_CHARACTER_STRING_WIDETAG
+#endif
+         ) && HeaderValue(s->header) == 1) { /* readonly string indicator */
+        int index = hopscotch_get(ht, (uword_t)s, 0);
+        if (!index) // Not found
+            hopscotch_insert(ht, (uword_t)s, 1);
+        else
+            *where = make_lispobj((void*)ht->keys[index-1], OTHER_POINTER_LOWTAG);
+    }
+}
+
+static uword_t remap_strings(lispobj* where, lispobj* limit, uword_t arg)
+{
+    struct hopscotch_table* ht = (struct hopscotch_table*)arg;
+    lispobj layout, bitmap, *next;
+    sword_t nwords, i, j;
+
+    for ( ; where < limit ; where = next ) {
+        lispobj header = *where;
+        if (is_cons_half(header)) {
+            remap_string(where+0, ht);
+            remap_string(where+1, ht);
+            next = where + 2;
+        } else {
+            int widetag = widetag_of(header);
+            nwords = sizetab[widetag](where);
+            next = where + nwords;
+            switch (widetag) {
+            case INSTANCE_WIDETAG: // mixed boxed/unboxed objects
+#ifdef LISP_FEATURE_COMPACT_INSTANCE_HEADER
+            case FUNCALLABLE_INSTANCE_WIDETAG:
+#endif
+                layout = instance_layout(where);
+                bitmap = ((struct layout*)native_pointer(layout))->bitmap;
+                for(i=1; i<nwords; ++i)
+                    if (layout_bitmap_logbitp(i-1, bitmap))
+                        remap_string(where+i, ht);
+                continue;
+            case CODE_HEADER_WIDETAG:
+                for_each_simple_fun(i, fun, (struct code*)where, 0, {
+                    lispobj* fun_slots = SIMPLE_FUN_SCAV_START(fun);
+                    for (j=0; j<SIMPLE_FUN_SCAV_NWORDS(fun); ++j)
+                        remap_string(fun_slots+j, ht);
+                })
+                nwords = code_header_words(header);
+                break;
+            default:
+                if (unboxed_obj_widetag_p(widetag))
+                    continue; // Ignore this object.
+            }
+            for(i=1; i<nwords; ++i)
+                remap_string(where+i, ht);
+        }
+    }
+    return 0;
+}
+
+void coalesce_strings()
+{
+    struct hopscotch_table ht;
+    hopscotch_create(&ht, HOPSCOTCH_STRING_HASH, 0, 1<<17, 0);
+#ifdef LISP_FEATURE_IMMOBILE_SPACE
+    remap_strings((lispobj*)IMMOBILE_SPACE_START,
+                  (lispobj*)SYMBOL(IMMOBILE_FIXEDOBJ_FREE_POINTER)->value,
+                  (uword_t)&ht);
+    remap_strings((lispobj*)IMMOBILE_VARYOBJ_SUBSPACE_START,
+                  (lispobj*)SYMBOL(IMMOBILE_SPACE_FREE_POINTER)->value,
+                  (uword_t)&ht);
+#endif
+    walk_generation(remap_strings, -1, (uword_t)&ht);
+    hopscotch_delete(&ht);
+}
